fix : 完善框架
- 根据现有业务更改代码生成
- 提升java编写规范
- 各种demo规范整理